ajuste de estilo

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -137,7 +137,7 @@ body
     display none
 header
   width 100%
-  height 150px
+  height 100px
   overflow hidden
   top 0
   left 0
@@ -232,6 +232,8 @@ header
     color #aaaaaa
 #us
   padding 60px 0
+  background-size cover
+  background-repeat no-repeat
   .who-us
     h1
       color #fff
@@ -365,7 +367,7 @@ header
       padding 50px 75px
 #content-area
   margin 0
-  padding 30px 60px
+  padding 30px 25px
   background-color #fff
   .title-category
     text-align left
