--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -25,6 +25,7 @@
       height 100%
 
 @media only screen and (min-width: 768px) and (max-width: 991px)
+
   .header_area_text
     padding-right 160px
 
@@ -65,6 +66,9 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .header.smaller
+    height 100px
+    position fixed
   .container-tab
     width 100%
     padding-left 0
@@ -118,6 +122,7 @@
     font-size 16px
     height 40px
   .slider-img
+    height 600px
     background-size cover
     background-position left
   header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
@@ -208,6 +213,16 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+
+  .header.smaller
+    height 85px
+    position inherit
+    .navbar-default
+      .navbar-nav > li > a
+        color #746857
+        padding 33px 15px
+       .navbar-nav > li > a:hover
+          color rgba(255,255,255,0.8)
   #slider-area
     background-color #444
     height auto
@@ -284,7 +299,7 @@
   .download-app a > img
     width 40%
   .slider-img
-    height 380px
+    height 650px
     background-size cover
     background-position left
   .box-gas
@@ -305,11 +320,22 @@
     padding 0
     border-left none
     border-top 1px solid #ddd
-
-  .carousel-caption h3
-    font-size 36px
+  .carousel-caption
+    top 0
+    padding-top 40px !important
+    background-color rgba(255,255,255.0.8)
+    width 100%
+    height 100%
+    .box-slide
+      width 100%
+      h1
+        font-size 28px
+      p
+        font-size 20px
+  .carousel-caption h1
+    font-size 22px
   .carousel-caption p
-    font-size 28px
+    font-size 16px
   .boxes-project
     margin-bottom 15px
     text-align center
@@ -351,8 +377,7 @@
     background transparent
     padding 0
     margin 30px 0 25px
-  .carousel-caption
-    top 30%
+
   .navbar-default .navbar-toggle
     border-color transparent
   #contact-section
@@ -405,15 +430,20 @@
   .social-media .social a
     word-wrap break-word
   #content-area
-    margin 30px 0 60px
+    margin 30px 0 25px
   .content-blog
     margin 30px 0 60px !important
   .carousel-caption
-    top 20%
+    top 0
     padding 0 15px
     .btn
       margin-bottom 20px
 
+  .header
+    .navbar-default
+      position fixed
+      .navbar-nav li > a
+        color #746857
 
   .main-nav
     background #ddd
