ajuste responsivo blog y contacto

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -360,7 +360,7 @@ header
     background-position center
     background-size cover
     background-repeat no-repeat
-    height 130px
+    height auto
     .title
       background-color rgba(0,0,0,0.5)
       color white
@@ -1313,7 +1313,7 @@ footer
   background-position center center
 
 .height-title
-  height 60px
+  height auto
 
 .height-summary
   height 70px
