--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -430,15 +430,18 @@
   .social-media .social a
     word-wrap break-word
   #content-area
-    margin 30px 0 25px
+    margin 15px 0 25px
   .content-blog
-    margin 30px 0 60px !important
+    margin 0 0 60px !important
+  .social .list > li > a, .social .list > li > a > span > p
+    font-size 18px
   .carousel-caption
     top 0
     padding 0 15px
     .btn
       margin-bottom 20px
-
+  .height-summary
+    height auto
   .header
     .navbar-default
       position fixed
