link to download app

--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -20,7 +20,7 @@
         <h3>
             Descargar app
         </h3>
-        <a href="#" class="download-app"><i class="fa fa-apple"></i></a>
-        <a href="#" class="download-app"><i class="fa fa-android"></i></a>
+        <!--<a href="#" class="download-app"><i class="fa fa-apple"></i></a>-->
+        <a href="https://goo.gl/bnxVLE" target="_blank" class="download-app"><i class="fa fa-android"></i></a>
     </div>
 </div>
