--- a/app/css/main.css
+++ b/app/css/main.css
@@ -128,13 +128,11 @@ body {
   display: none;
 }
 .header.smaller {
-  height: 85px;
+  height: 160px;
   position: fixed;
 }
 .header.smaller .navbar-default {
-  background: #d96263 /* fallback for old browsers */;
-  background: -webkit-linear-gradient(to left, #d96263, #f45c43) /* Chrome 10-25, Safari 5.1-6 */;
-  background: linear-gradient(to left, #d96263, #f45c43) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
+  background: #2f3130 /* fallback for old browsers */;
 }
 .header.smaller .navbar-default .navbar-nav > li > a {
   color: #fff;
@@ -173,7 +171,7 @@ header {
 }
 .header .navbar-default {
   position: absolute;
-  background-color: #fff;
+  background-color: #2f3130;
   left: 0;
   right: 0;
   height: 100px;
@@ -186,7 +184,7 @@ header {
   padding: 5px 15px;
 }
 .header .navbar-default .navbar-nav > li > a {
-  color: #746857;
+  color: #fff;
   padding: 37px 15px;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
@@ -414,6 +412,10 @@ header {
   font-size: 45px;
   color: #555;
 }
+.navbar-info {
+  padding: 1.5em 0;
+  background-color: #fff;
+}
 .header-title-page .img-title {
   background-position: center;
   background-size: cover;
@@ -470,6 +472,12 @@ header {
   opacity: 0.3;
   padding: 20px 0;
   color: #ffa500;
+}
+.services {
+  background: #009f7b;
+}
+.services .box-service {
+  padding: 15px 0 10px;
 }
 #contact {
   background: #e9e8e7;
