--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,8 +17,38 @@
         </uib-carousel>
     </div>
 </div>
+<section class="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 box-service">
+                <div class="col-md-2">
+                    <span><a href=""><i class="fa fa-calendar fa-4x"></i></a></span>
+                </div>
+                <div class="col-md-5">
+                    <h4>Tecnología de punta</h4>
+                </div>
 
-<section id="us" class="section_padding" style="background-image: url('{{Home.postAbout.urlImages.original}}')">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="products">
+    <div class="container">
+        <div class="box-products">
+            <div class="row text-center">
+                <div class="title">
+                    <h3>Conoce nuestros productos</h3>
+                </div>
+                <div class="prod-entry">
+                    <p>Somos la mejor opciom en equipo de automatizacionn industrial con
+                        tecnologia de punta al mejor precio,capacitando y apoyando a la industria nacional.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--<section id="us" class="section_padding" style="background-image: url('{{Home.postAbout.urlImages.original}}')">
     <div class="container">
         <div class="col-md-7 col-sm-7 who-us">
             <article ng-bind-html="Home.postAbout.content"></article>
@@ -30,7 +60,7 @@
         </div>
 
     </div>
-</section>
+</section>-->
 
 <section id="contact-sec">
     <div class="container">
@@ -46,14 +76,14 @@
         <h3><i class="ion-ios-email"></i> Suscríbete a nuestro newsletter para más información</h3>
 
         <form class="form-inline col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                <div class="col-md-10">
-                    <input type="email" class="form-control" id="email" placeholder="pablo@example.com">
+            <div class="col-md-10">
+                <input type="email" class="form-control" id="email" placeholder="pablo@example.com">
+            </div>
+            <div class="col-md-2 col-sm-2">
+                <div class="text-left">
+                    <button type="submit" class="btn btn-white-clear">Enviar</button>
                 </div>
-                <div class="col-md-2 col-sm-2">
-                    <div class="text-left">
-                        <button type="submit" class="btn btn-white-clear">Enviar</button>
-                    </div>
-                </div>
+            </div>
         </form>
     </div>
 </section>
