--- a/app/css/main.css
+++ b/app/css/main.css
@@ -49,18 +49,18 @@ h5,
 h6 {
   margin: 0 0 15px;
   font-weight: 500;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Slab', sans-serif;
 }
 .section_padding {
   padding: 80px 0;
 }
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 16px;
 }
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .white {
   color: #fff !important;
@@ -132,14 +132,14 @@ body {
   position: fixed;
 }
 .header.smaller .navbar-default {
-  background: #2f3130 /* fallback for old browsers */;
+  background: #323232 /* fallback for old browsers */;
 }
 .header.smaller .navbar-default .navbar-nav > li > a {
   color: #fff;
   padding: 33px 15px;
 }
 .header.smaller .navbar-default .navbar-nav > li > a:hover {
-  color: rgba(255,255,255,0.8);
+  color: #439e7b;
 }
 .header.smaller .navbar-default .logo-white {
   display: inline;
@@ -171,7 +171,7 @@ header {
 }
 .header .navbar-default {
   position: absolute;
-  background-color: #2f3130;
+  background-color: #323232;
   left: 0;
   right: 0;
   height: 100px;
@@ -187,7 +187,7 @@ header {
   color: #fff;
   padding: 37px 15px;
   font-size: 18px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Slab', sans-serif;
   font-weight: 500;
   -webkit-transition: all ease-in-out 0.35s;
   -o-transition: all ease-in-out 0.35s;
@@ -196,7 +196,7 @@ header {
 .header .navbar-default .navbar-nav > li > a:hover,
 .header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #d96263;
+  color: #439e7b;
 }
 .header .navbar-default .container-fluid {
   display: table;
@@ -348,7 +348,7 @@ header {
 .slider-img {
   background-position: top center;
   background-size: 100%;
-  height: 620px;
+  height: 500px;
   background-repeat: no-repeat;
 }
 .bg-inner {
@@ -363,6 +363,7 @@ header {
 }
 .carousel-inner {
   background-color: transparent;
+  margin-top: 32px;
 }
 .carousel-control {
   display: none;
@@ -413,8 +414,19 @@ header {
   color: #555;
 }
 .navbar-info {
-  padding: 1.5em 0;
+  padding: 1.3em 0;
   background-color: #fff;
+}
+.navbar-info a {
+  color: #565656;
+  font-size: 16px;
+}
+.navbar-info i {
+  font-size: 22px;
+}
+.dividerw {
+  border: 1px solid #ccc;
+  margin-top: 0;
 }
 .header-title-page .img-title {
   background-position: center;
@@ -473,11 +485,84 @@ header {
   padding: 20px 0;
   color: #ffa500;
 }
+.bg-prod {
+  height: 215px;
+  background-position: center center;
+  background-size: contain !important;
+  background-repeat: no-repeat !important;
+}
 .services {
-  background: #009f7b;
+  background: #439e7b;
 }
 .services .box-service {
-  padding: 15px 0 10px;
+  padding: 0 50px;
+}
+.services .box-service i {
+  color: #fff;
+  font-size: 7em;
+}
+.services .box-service h3 {
+  padding: 35px 20px;
+  text-align: left;
+  color: #fff;
+}
+.products {
+  padding: 70px 0;
+}
+.products .box-products .prod-title h3 {
+  font-weight: 600;
+  color: #565656;
+}
+.products .box-products .prod-entry {
+  padding: 15px 19% 10px;
+  margin-bottom: 50px;
+}
+.products .box-products .prod-entry p {
+  color: #676767;
+  font-size: 20px;
+}
+.box-prod {
+  background: #fefefe;
+  background: -moz-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, #fefefe), color-stop(51%, #fefefe), color-stop(100%, #dfdfdf));
+  background: -webkit-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
+  background: -o-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
+  background: -ms-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
+  background: linear-gradient(to bottom, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
+  padding: 20px 0;
+  border-bottom: 3px solid #c1c1c0;
+}
+.box-prod .img-prod {
+  padding-bottom: 15px;
+}
+.box-prod .prod-descrip {
+  color: #717171;
+  height: 65px;
+  font-family: Roboto;
+  padding: 15px 10% 0;
+  margin-bottom: 20px;
+  font-weight: 100;
+}
+.box-prod .prod-price {
+  color: #323232;
+}
+.register {
+  background-image: url("../img/bg-section.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 373px;
+}
+.register .reg-content {
+  padding: 70px 0 50px;
+}
+.register .reg-content .reg-descrip {
+  color: #717171;
+  font-weight: 100;
+  font-family: Roboto;
+}
+.register .reg-content .reg-q {
+  color: #439e7b;
+  margin: 1.5em 0;
 }
 #contact {
   background: #e9e8e7;
@@ -736,9 +821,11 @@ color
 }
 .box-widget {
   padding: 5px 0;
-  background-color: #f5f5f5;
-  border-radius: 5px;
-  border: 1px solid #eee;
+  border: 1px solid #ccc;
+}
+.box-widget .widget-title {
+  padding-left: 10px;
+  font-weight: bold;
 }
 .box-widget .box-widget-header {
   padding: 10px;
@@ -748,17 +835,17 @@ color
   color: #746857;
 }
 .box-widget .box-widget-container {
-  padding: 20px;
+  padding: 5px;
 }
 .box-widget .box-widget-container h3>a,
 .box-widget .box-widget-container h2>a {
   font-size: 14px;
-  color: #746857;
+  color: #565656;
   font-weight: 300;
 }
 .box-widget .box-widget-container h3>a:hover,
 .box-widget .box-widget-container h2>a:hover {
-  color: #d96263;
+  color: #439e7b;
 }
 .box-widget .box-widget-container h2 {
   font-size: 18px;
@@ -792,10 +879,14 @@ color
   padding-right: 10px;
 }
 .list-sidebar li > a {
-  color: #746857;
+  color: #565656;
+  font-size: 17px;
 }
 .list-sidebar li > a:hover {
-  color: #d96263;
+  color: #439e7b;
+}
+.list-sidebar li > a p {
+  font-weight: 500;
 }
 .box-blog {
   padding-bottom: 30px !important;
@@ -1119,17 +1210,21 @@ color
   width: 100%;
 }
 footer {
-  background-color: #726c64;
+  background-color: #323232;
   padding: 30px 0;
 }
-footer .contact-sty h3,
-footer .contact-sty a {
+footer .contact-sty h3 {
   color: #fff;
+  padding-bottom: 5px;
   font-size: 18;
+  border-bottom: 2px solid #ccc;
 }
-footer .contact-sty h3:hover,
-footer .contact-sty a:hover {
-  color: #d96263;
+footer .contact-sty .list a {
+  color: #ccc;
+}
+footer .contact-sty .list a:hover {
+  color: #439e7b;
+  transition: all 0.25s ease-in-out;
 }
 footer .contact-sty .download-app > i {
   font-size: 48px;
@@ -1137,6 +1232,27 @@ footer .contact-sty .download-app > i {
 }
 footer .contact-sty .download-app > i:hover {
   color: #d96263;
+}
+.btn-cart {
+  border-radius: 0 !important;
+  background: #439e7b;
+  border-color: #439e7b;
+}
+.btn-cart.btn-cart:hover,
+.btn-cart.btn-cart:focus {
+  background: #174f36 !important;
+}
+.btn-reg {
+  background: #fff;
+  color: #439e7b;
+  border: 2px solid #439e7b;
+  border-radius: 0;
+}
+.btn-reg.btn-reg:hover,
+.btn-reg.btn-reg:focus {
+  border-color: #439e7b;
+  background-color: transparent;
+  color: #439e7b;
 }
 .btn {
   font-size: 18px;
