--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,12 +7,12 @@
                 <a post-link="{ link: {url: slide.link, target: '_self'} }">
                     <div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>
                 </a>
-                <div class="carousel-caption">
+                <!--<div class="carousel-caption">
                     <div class="box-slide">
                         <h1>{{slide.title}}</h1>
                         <article ng-bind-html="slide.content | trustHtml"></article>
                     </div>
-                </div>
+                </div>-->
             </uib-slide>
         </uib-carousel>
     </div>
@@ -20,14 +20,15 @@
 <section class="services">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 box-service">
-                <div class="col-md-2">
-                    <span><a href=""><i class="fa fa-calendar fa-4x"></i></a></span>
-                </div>
-                <div class="col-md-5">
-                    <h4>Tecnología de punta</h4>
-                </div>
-
+            <div class="col-md-4 box-service text-center" ng-repeat="service in Home.services">
+                <a ui-sref="post_detail({slug: service.slug})">
+                    <div class="col-md-3">
+                        <span><i class="{{service.excerpt}}"></i></span>
+                    </div>
+                    <div class="col-md-9">
+                        <h3>{{service.title}}</h3>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -36,13 +37,41 @@
     <div class="container">
         <div class="box-products">
             <div class="row text-center">
-                <div class="title">
+                <div class="prod-title">
                     <h3>Conoce nuestros productos</h3>
                 </div>
                 <div class="prod-entry">
-                    <p>Somos la mejor opciom en equipo de automatizacionn industrial con
-                        tecnologia de punta al mejor precio,capacitando y apoyando a la industria nacional.</p>
+                    <p>Somos la mejor opción en equipo de automatización industrial con
+                        tecnología de punta al mejor precio, capacitando y apoyando a la industría nacional.</p>
                 </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4" ng-repeat="product in Home.products">
+                    <div class="box-prod">
+                        <div class="bg-prod" style="background-image: url('{{product.urlImages.original }}')"></div>
+                        <h3 class="prod-descrip">{{product.title}}</h3>
+                        <h4 class="prod-price"><strong>{{product.excerpt}}</strong></h4>
+                        <button class="btn btn-success btn-cart">Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="register">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <div class="reg-content">
+                    <h2 class="reg-descrip">Acude a nuestros cursos, talleres y asesorías
+                        para la utilización del produto que adquiriste con
+                        nosotros. Para nosotros es importante atender todas tus necesidades.</h2>
+
+                    <h4 class="reg-q">¿Cómo registrarme y acudir a los cursos?</h4>
+                    <button class="btn btn-success btn-lg btn-reg">Más información</button>
+                </div>
+
             </div>
         </div>
     </div>
@@ -62,30 +91,6 @@
     </div>
 </section>-->
 
-<section id="contact-sec">
-    <div class="container">
-        <div class="col-md-4 section-cont" ng-repeat="post in Home.postFeauterd">
-            <i class="{{ post.excerpt }}"></i> <br/>
-            <span>{{ post.title }}</span>
-            <article ng-bind-html="post.content | trustHtml"></article>
-        </div>
-    </div>
-</section>
-<section id="newsletter">
-    <div class="container">
-        <h3><i class="ion-ios-email"></i> Suscríbete a nuestro newsletter para más información</h3>
 
-        <form class="form-inline col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-            <div class="col-md-10">
-                <input type="email" class="form-control" id="email" placeholder="pablo@example.com">
-            </div>
-            <div class="col-md-2 col-sm-2">
-                <div class="text-left">
-                    <button type="submit" class="btn btn-white-clear">Enviar</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</section>
 
 
