--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,7 +1,5 @@
-<div class="header-title-page">
-    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <h2 class="title">{{ Post.detail.title }}</h2>
-    </div>
+<div class="header-title">
+    <h2 class="title text-center">{{ Post.detail.title }}</h2>
 </div>
 <div id="breadcrumb">
     <div class="container">
