--- a/app/css/main.css
+++ b/app/css/main.css
@@ -152,6 +152,16 @@ body {
 .header.smaller .sub-main {
   display: none;
 }
+.navbar-info .shopping-cart a {
+  font-size: 24px;
+  font-weight: 100;
+}
+.navbar-info .shopping-cart a:hover {
+  text-decoration: none;
+}
+.navbar-info .shopping-cart i {
+  font-size: 30px;
+}
 header {
   width: 100%;
   height: 100px;
@@ -419,7 +429,8 @@ header {
 }
 .navbar-info a {
   color: #565656;
-  font-size: 16px;
+  font-size: 18px;
+  font-family: "Roboto Slab, sans-serif";
 }
 .navbar-info i {
   font-size: 22px;
@@ -428,16 +439,14 @@ header {
   border: 1px solid #ccc;
   margin-top: 0;
 }
-.header-title-page .img-title {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: auto;
+.header-title {
+  background: #439e7b;
+  height: 165px;
 }
-.header-title-page .img-title .title {
-  background-color: rgba(0,0,0,0.5);
+.header-title .title {
   color: #fff;
-  padding: 50px 75px;
+  font-size: 2.5em;
+  padding: 100px 0;
 }
 #content-area {
   margin: 0;
@@ -530,7 +539,7 @@ header {
   background: -ms-linear-gradient(top, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
   background: linear-gradient(to bottom, #fefefe 0%, #fefefe 51%, #dfdfdf 100%);
   padding: 20px 0;
-  border-bottom: 3px solid #c1c1c0;
+  border-bottom: 1px solid #c1c1c0;
 }
 .box-prod .img-prod {
   padding-bottom: 15px;
@@ -1140,11 +1149,18 @@ color
   font-size: 20px;
   padding-right: 30px;
 }
+.forgot-pass a {
+  color: #676767;
+}
+.forgot-pass a:hover,
+.forgot-pass a:focus {
+  color: #439e7b;
+}
 .form-horizontal label {
   color: #746857;
 }
-.title-post h3 {
-  color: #746857 !important;
+.title-post .title {
+  color: #717171 !important;
 }
 .social {
   clear: both;
@@ -1233,10 +1249,23 @@ footer .contact-sty .download-app > i {
 footer .contact-sty .download-app > i:hover {
   color: #d96263;
 }
+.btn-login-ca {
+  padding: 10px 0;
+  border-radius: 0 !important;
+  background: #439e7b;
+  font-family: "Roboto Slab";
+  font-weight: 600 !important;
+  color: #fff;
+  font-size: 24px !important;
+}
+.btn-login-ca.btn-login-ca:hover,
+.btn-cart.btn-login-ca:focus {
+  background: #174f36 !important;
+  color: #fff;
+}
 .btn-cart {
   border-radius: 0 !important;
   background: #439e7b;
-  border-color: #439e7b;
 }
 .btn-cart.btn-cart:hover,
 .btn-cart.btn-cart:focus {
@@ -1547,7 +1576,7 @@ footer .contact-sty .download-app > i:hover {
 }
 .contact-section {
   background: transparent;
-  margin-top: 10px;
+  margin-top: 100px;
 }
 .form-item {
   padding-top: 20px;
@@ -1577,7 +1606,7 @@ footer .contact-sty .download-app > i:hover {
 }
 .form-control:focus {
   padding: 6px 12px;
-  border: 1px solid #cb6133 !important;
+  border: 1px solid #439e7b !important;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
