--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,38 +1,65 @@
-<section class="main-bg-pages"></section>
 <section id="content-contact">
     <div class="">
         <div class="form-section">
             <div class="container">
-                <div class="col-md-6 col-md-offset-3 contact-section">
+                <div class="col-md-6 contact-section">
                     <div class="title-post">
-                        <h2 class="title">Iniciar sesión</h2>
-                        <hr/>
+                        <h2 class="title text-center">Iniciar sesión</h2>
                     </div>
-
-                    <div class="col-md-12">
+                    <div class="col-md-10">
                         <form class="padding form-horizontal">
                             <div class="form-group">
-                                <label for="email">Usuario</label>
-                                <input type="email" class="form-control" id="email" name="email"
-                                       placeholder="Correo electrónico" required>
+                                <input type="text" class="form-control" id="email" name="email"
+                                       placeholder="Usuario/Correo" required>
                             </div>
-
                             <div class="form-group">
-                                <label for="phone">Contraseña </label>
                                 <input type="password" class="form-control" id="password" name="password"
-                                       placeholder="Teléfono" required>
+                                       placeholder="Contraseña" required>
                             </div>
+                            <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
 
-                            <div class="text-center" style="padding-top: 15px;">
-                                <button type="submit" class="btn-orange" ng-disabled="Contact.busy">
-                                    <i class="fa fa-user"></i> Iniciar sesión <span ng-if="Contact.busy"><i
+                            <div class="text-center" style="padding-top: 58px;">
+                                <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="Contact.busy">
+                                     Iniciar sesión <span ng-if="Contact.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
                                 </button>
-
                             </div>
                         </form>
                     </div>
                 </div>
+                <div class="col-md-6 contact-section">
+                    <div class="title-post">
+                        <h2 class="title text-center">Registro</h2>
+                    </div>
+
+                    <div class="col-md-offset-2 col-md-10">
+                        <form class="padding form-horizontal">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="fullname" name="fullname"
+                                       placeholder="Nombre completo" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="emailr" name="emailr"
+                                       placeholder="Correo electrónico" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="passwordr" name="passwordr"
+                                       placeholder="Contraseña" required>
+                            </div>
+
+                            <div class="text-center" style="padding-top: 15px;">
+                                <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="Contact.busy">
+                                    Regístrarme <span ng-if="Contact.busy"><i
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6"></div>
+                <div class="col-md-6"></div>
             </div>
         </div>
     </div>
