--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -387,14 +387,14 @@ header
   margin-top 0
 .header-title
   background cagreen
-  height 165px
+  height 145px
   .title
     color white
     font-size 2.5em
-    padding 100px 0
+    padding 90px 0
 #content-area
   margin 0
-  padding 30px 25px
+  padding 70px 25px
   background-color #fff
   .title-category
     text-align left
@@ -1070,6 +1070,7 @@ footer
     color #fff
 .btn-cart
   border-radius 0 !important
+  border-color cagreen
   background cagreen
   .btn-cart&:hover, .btn-cart&:focus
     background cagreenh !important
