--- a/app/css/main.css
+++ b/app/css/main.css
@@ -441,16 +441,16 @@ header {
 }
 .header-title {
   background: #439e7b;
-  height: 165px;
+  height: 145px;
 }
 .header-title .title {
   color: #fff;
   font-size: 2.5em;
-  padding: 100px 0;
+  padding: 90px 0;
 }
 #content-area {
   margin: 0;
-  padding: 30px 25px;
+  padding: 70px 25px;
   background-color: #fff;
 }
 #content-area .title-category {
@@ -1265,6 +1265,7 @@ footer .contact-sty .download-app > i:hover {
 }
 .btn-cart {
   border-radius: 0 !important;
+  border-color: #439e7b;
   background: #439e7b;
 }
 .btn-cart.btn-cart:hover,
